crates/memscribe-testkit/tests/snapshots/nodes__zed__v1__happy_path_decision_then_edits.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "zed-thread-001",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Let's use Postgres instead of MySQL for the persistence layer.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 6
      },
      {
        "rule_id": "decision_verb.polite_select",
        "category": "decision_verb",
        "matched_text": "Let's use",
        "offset": 0
      },
      {
        "rule_id": "rejection.instead_of",
        "category": "rejection",
        "matched_text": "instead of",
        "offset": 19
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/zed/v1/happy_path_decision_then_edits.jsonl",
        "byte_offset": 189,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Let's use Postgres instead of MySQL for the persistence layer.",
    "considered_options": [
      {
        "text": "MySQL",
        "chosen": false
      },
      {
        "text": "Postgres",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed",
    "timestamp": "2026-06-22T10:00:05Z"
  },
  {
    "node": "episode",
    "path": "src/db/config.rs",
    "diff": {
      "path": "src/db/config.rs",
      "old": "let url = \"mysql://localhost/orbit\";",
      "new": "let url = \"postgres://localhost/orbit\";",
      "unified": "@@ -1 +1 @@\n-let url = \"mysql://localhost/orbit\";\n+let url = \"postgres://localhost/orbit\";",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "a1b2c3d4e5f6",
      "branch": "main"
    },
    "episode_id": "5bff86a74314fa74565a056cc22a2761228a44545dce893b102ac138d80f4e07"
  },
  {
    "node": "episode",
    "path": "src/db/schema.rs",
    "diff": {
      "path": "src/db/schema.rs",
      "old": "// MySQL dialect\n",
      "new": "// Postgres dialect\nuse sqlx::postgres::PgPool;\n",
      "unified": null,
      "added_lines": 2,
      "removed_lines": 1
    },
    "git": {
      "sha": "a1b2c3d4e5f6",
      "branch": "main"
    },
    "episode_id": "599b265bbcf4c0163fbc1f116146bbfbdef58c4a77f1cdcee2fdaf5d2c3ac1ec"
  },
  {
    "node": "binding",
    "from": "decision:zed-thread-001:1",
    "to": "episode:599b265bbcf4c0163fbc1f116146bbfbdef58c4a77f1cdcee2fdaf5d2c3ac1ec",
    "relation": "produced",
    "prov": {
      "used_session": "zed-thread-001",
      "used_decision": "decision:zed-thread-001:1",
      "was_generated_by_session": "zed-thread-001",
      "t_use": "2026-06-22T10:00:05Z",
      "t_gen": "2026-06-22T10:00:09Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.5,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:zed-thread-001:1",
    "to": "episode:5bff86a74314fa74565a056cc22a2761228a44545dce893b102ac138d80f4e07",
    "relation": "produced",
    "prov": {
      "used_session": "zed-thread-001",
      "used_decision": "decision:zed-thread-001:1",
      "was_generated_by_session": "zed-thread-001",
      "t_use": "2026-06-22T10:00:05Z",
      "t_gen": "2026-06-22T10:00:09Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.5,
      "confidence": 0.5,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  }
]
