crates/memscribe-testkit/tests/snapshots/nodes__zed__v1__multi_edit_single_commit.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "zed-thread-006",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "We will use Argon2 for password hashing across the auth service. Update the hasher, the verifier, and the config in one pass.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 8
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/zed/v1/multi_edit_single_commit.jsonl",
        "byte_offset": 199,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "We will use Argon2 for password hashing across the auth service.",
    "considered_options": [
      {
        "text": "Argon2",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/auth/hasher.rs",
    "diff": {
      "path": "src/auth/hasher.rs",
      "old": "use bcrypt::hash;\n",
      "new": "use argon2::Argon2;\n",
      "unified": "@@ -1 +1 @@\n-use bcrypt::hash;\n+use argon2::Argon2;\n",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "b2b2b2b2b2b2",
      "branch": "feat/argon2"
    },
    "episode_id": "bce1b9fc14ac1a8686c27d955e7ac3e3d13a5e9754e57f63fbc16e28d9963e6f"
  },
  {
    "node": "episode",
    "path": "src/auth/verifier.rs",
    "diff": {
      "path": "src/auth/verifier.rs",
      "old": "use bcrypt::verify;\n",
      "new": "use argon2::PasswordVerifier;\n",
      "unified": "@@ -1 +1 @@\n-use bcrypt::verify;\n+use argon2::PasswordVerifier;\n",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "b2b2b2b2b2b2",
      "branch": "feat/argon2"
    },
    "episode_id": "3f55ab817a0ad7dc4679f6164a28b84c36b54d8bc4425da7d2b75d36716e1acb"
  },
  {
    "node": "episode",
    "path": "config/auth.toml",
    "diff": {
      "path": "config/auth.toml",
      "old": "hash = \"bcrypt\"\n",
      "new": "hash = \"argon2\"\n",
      "unified": "@@ -1 +1 @@\n-hash = \"bcrypt\"\n+hash = \"argon2\"\n",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "b2b2b2b2b2b2",
      "branch": "feat/argon2"
    },
    "episode_id": "5333c195d9d5de8383f4cc89a0505fcbfbc49674bed60b0e54d9506c2df6bb31"
  },
  {
    "node": "binding",
    "from": "decision:zed-thread-006:1",
    "to": "episode:3f55ab817a0ad7dc4679f6164a28b84c36b54d8bc4425da7d2b75d36716e1acb",
    "relation": "produced",
    "prov": {
      "used_session": "zed-thread-006",
      "used_decision": "decision:zed-thread-006:1",
      "was_generated_by_session": "zed-thread-006",
      "t_use": "2026-06-22T14:00:00Z",
      "t_gen": "2026-06-22T14:00:03Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.333333,
      "confidence": 0.333333,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:zed-thread-006:1",
    "to": "episode:5333c195d9d5de8383f4cc89a0505fcbfbc49674bed60b0e54d9506c2df6bb31",
    "relation": "produced",
    "prov": {
      "used_session": "zed-thread-006",
      "used_decision": "decision:zed-thread-006:1",
      "was_generated_by_session": "zed-thread-006",
      "t_use": "2026-06-22T14:00:00Z",
      "t_gen": "2026-06-22T14:00:03Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.333333,
      "confidence": 0.333333,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  },
  {
    "node": "binding",
    "from": "decision:zed-thread-006:1",
    "to": "episode:bce1b9fc14ac1a8686c27d955e7ac3e3d13a5e9754e57f63fbc16e28d9963e6f",
    "relation": "produced",
    "prov": {
      "used_session": "zed-thread-006",
      "used_decision": "decision:zed-thread-006:1",
      "was_generated_by_session": "zed-thread-006",
      "t_use": "2026-06-22T14:00:00Z",
      "t_gen": "2026-06-22T14:00:03Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": {
      "support": 0.333333,
      "confidence": 0.333333,
      "lift": 1.0,
      "phi": 0.0,
      "p": 1.0
    }
  }
]
