crates/memscribe-testkit/tests/snapshots/nodes__zed__v1__rejected_alternative.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "zed-thread-002",
    "turn_range": {
      "start": 3,
      "end": 4
    },
    "text": "Agreed, go with the in-process LRU.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "go with",
        "offset": 8
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/zed/v1/rejected_alternative.jsonl",
        "byte_offset": 660,
        "line_no": 4
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Agreed, go with the in-process LRU.",
    "considered_options": [
      {
        "text": "the",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 3,
      "end": 4
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/cache/lru.rs",
    "diff": {
      "path": "src/cache/lru.rs",
      "old": "",
      "new": "pub struct Lru { cap: usize }\n",
      "unified": "@@ -0,0 +1 @@\n+pub struct Lru { cap: usize }",
      "added_lines": 1,
      "removed_lines": 0
    },
    "git": {
      "sha": "f6e5d4c3b2a1",
      "branch": "feature/caching"
    },
    "episode_id": "85b3f3ce6b9be9a870c5a8eace5734be2f128a4dea809c91faa590a31a7a3d5b"
  },
  {
    "node": "binding",
    "from": "decision:zed-thread-002:3",
    "to": "episode:85b3f3ce6b9be9a870c5a8eace5734be2f128a4dea809c91faa590a31a7a3d5b",
    "relation": "produced",
    "prov": {
      "used_session": "zed-thread-002",
      "used_decision": "decision:zed-thread-002:3",
      "was_generated_by_session": "zed-thread-002",
      "t_use": "2026-06-22T11:00:40Z",
      "t_gen": "2026-06-22T11:00:46Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  }
]
