crates/memscribe-testkit/tests/snapshots/nodes__zed__v1__rewind_compaction.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "zed-thread-007",
    "turn_range": {
      "start": 2,
      "end": 3
    },
    "text": "Use MongoDB for the catalog store. Wire up the document client.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "Use",
        "offset": 0
      },
      {
        "rule_id": "action.create_strong",
        "category": "action_request",
        "matched_text": "Wire up",
        "offset": 35
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/zed/v1/rewind_compaction.jsonl",
        "byte_offset": 348,
        "line_no": 3
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Use MongoDB for the catalog store.",
    "considered_options": [
      {
        "text": "MongoDB",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 2,
      "end": 3
    },
    "fact_status": "observed",
    "timestamp": "2026-06-22T15:01:00Z"
  },
  {
    "node": "episode",
    "path": "src/store.rs",
    "diff": {
      "path": "src/store.rs",
      "old": "pub struct Store;\n",
      "new": "use mongodb::Client;\npub struct Store(Client);\n",
      "unified": "@@ -1 +1,2 @@\n-pub struct Store;\n+use mongodb::Client;\n+pub struct Store(Client);\n",
      "added_lines": 2,
      "removed_lines": 1
    },
    "git": {
      "sha": "c3c3c3c3c3c3",
      "branch": "main"
    },
    "episode_id": "6927b2901b199f3b1412003a562ec90467c9f38425ca7713bd347eca0596d26e"
  },
  {
    "node": "conversation",
    "session_id": "zed-thread-007",
    "turn_range": {
      "start": 6,
      "end": 7
    },
    "text": "On reflection, use Postgres with JSONB for the catalog store instead of MongoDB.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 15
      },
      {
        "rule_id": "rejection.instead_of",
        "category": "rejection",
        "matched_text": "instead of",
        "offset": 61
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/zed/v1/rewind_compaction.jsonl",
        "byte_offset": 1294,
        "line_no": 6
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "On reflection, use Postgres with JSONB for the catalog store instead of MongoDB.",
    "considered_options": [
      {
        "text": "MongoDB",
        "chosen": false
      },
      {
        "text": "Postgres",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 6,
      "end": 7
    },
    "fact_status": "observed",
    "timestamp": "2026-06-22T15:10:00Z"
  },
  {
    "node": "episode",
    "path": "src/store.rs",
    "diff": {
      "path": "src/store.rs",
      "old": "use mongodb::Client;\npub struct Store(Client);\n",
      "new": "use postgres::Client;\npub struct Store(Client);\n",
      "unified": "@@ -1,2 +1,2 @@\n-use mongodb::Client;\n+use postgres::Client;\n pub struct Store(Client);\n",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "c3c3c3c3c3c3",
      "branch": "main"
    },
    "episode_id": "01e79cdccefd6a005798b094ba43a3bdde90ca842e7d9176a2cc7e366f65cffa"
  },
  {
    "node": "binding",
    "from": "decision:zed-thread-007:2",
    "to": "episode:6927b2901b199f3b1412003a562ec90467c9f38425ca7713bd347eca0596d26e",
    "relation": "produced",
    "prov": {
      "used_session": "zed-thread-007",
      "used_decision": "decision:zed-thread-007:2",
      "was_generated_by_session": "zed-thread-007",
      "t_use": "2026-06-22T15:01:00Z",
      "t_gen": "2026-06-22T15:01:03Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  },
  {
    "node": "binding",
    "from": "decision:zed-thread-007:6",
    "to": "episode:01e79cdccefd6a005798b094ba43a3bdde90ca842e7d9176a2cc7e366f65cffa",
    "relation": "produced",
    "prov": {
      "used_session": "zed-thread-007",
      "used_decision": "decision:zed-thread-007:6",
      "was_generated_by_session": "zed-thread-007",
      "t_use": "2026-06-22T15:10:00Z",
      "t_gen": "2026-06-22T15:10:03Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  }
]
