crates/memscribe-testkit/tests/snapshots/nodes__zed__v1__subagent_thread.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "zed-thread-008",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Kick off the ingest refactor; delegate the parser rewrite to a focused sub-thread.",
    "markers": [
      {
        "rule_id": "action.restructure_strong",
        "category": "action_request",
        "matched_text": "refactor",
        "offset": 20
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/zed/v1/subagent_thread.jsonl",
        "byte_offset": 192,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Kick off the ingest refactor; delegate the parser rewrite to a focused sub-thread.",
    "considered_options": [
      {
        "text": "d",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "observed"
  },
  {
    "node": "conversation",
    "session_id": "zed-thread-008",
    "turn_range": {
      "start": 4,
      "end": 5
    },
    "text": "In this sub-thread, use a streaming pull-parser for the ingest format instead of the buffered one.",
    "markers": [
      {
        "rule_id": "decision_verb.use",
        "category": "decision_verb",
        "matched_text": "use",
        "offset": 20
      },
      {
        "rule_id": "rejection.instead_of",
        "category": "rejection",
        "matched_text": "instead of",
        "offset": 70
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/zed/v1/subagent_thread.jsonl",
        "byte_offset": 1052,
        "line_no": 5
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "In this sub-thread, use a streaming pull-parser for the ingest format instead of the buffered one.",
    "considered_options": [
      {
        "text": "the",
        "chosen": false
      },
      {
        "text": "a",
        "chosen": true
      }
    ],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 4,
      "end": 5
    },
    "fact_status": "observed"
  },
  {
    "node": "episode",
    "path": "src/ingest/parser.rs",
    "diff": {
      "path": "src/ingest/parser.rs",
      "old": "let buf = read_all(input);\n",
      "new": "let mut reader = PullParser::new(input);\n",
      "unified": "@@ -1 +1 @@\n-let buf = read_all(input);\n+let mut reader = PullParser::new(input);\n",
      "added_lines": 1,
      "removed_lines": 1
    },
    "git": {
      "sha": "d4d4d4d4d4d4",
      "branch": "main"
    },
    "episode_id": "dc3a650b067534c08c3ba63405e19bb3112b5d73e6d9bf5d8fcf5d190f3d405d"
  },
  {
    "node": "binding",
    "from": "decision:zed-thread-008:4",
    "to": "episode:dc3a650b067534c08c3ba63405e19bb3112b5d73e6d9bf5d8fcf5d190f3d405d",
    "relation": "produced",
    "prov": {
      "used_session": "zed-thread-008",
      "used_decision": "decision:zed-thread-008:4",
      "was_generated_by_session": "zed-thread-008",
      "t_use": "2026-06-22T16:01:00Z",
      "t_gen": "2026-06-22T16:01:03Z"
    },
    "fact_status": "deterministically_derived",
    "correlation": null
  }
]
