crates/memscribe-testkit/tests/snapshots/nodes__zed__v1__tool_failure.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: nodes
---
[
  {
    "node": "conversation",
    "session_id": "zed-thread-004",
    "turn_range": {
      "start": 1,
      "end": 2
    },
    "text": "Rename the config field timeout_ms to timeout_millis everywhere.",
    "markers": [
      {
        "rule_id": "action.bare_imperative",
        "category": "action_request",
        "matched_text": "Rename the config",
        "offset": 0
      }
    ],
    "fact_status": "observed",
    "provenance": [
      {
        "file": "fixtures/zed/v1/tool_failure.jsonl",
        "byte_offset": 189,
        "line_no": 2
      }
    ]
  },
  {
    "node": "decision",
    "epitome": "Rename the config field timeout_ms to timeout_millis everywhere.",
    "considered_options": [],
    "is_ban": false,
    "superseded_by": null,
    "confirmation": null,
    "source_span": {
      "start": 1,
      "end": 2
    },
    "fact_status": "statistically_ranked",
    "timestamp": "2026-06-22T13:00:02Z"
  }
]
